--- a/.env
+++ b/.env
@@ -4,3 +4,10 @@ DEBUG =True
 DATABASE_NAME =loanmanagement
 DATABASE_USER =postgres
 DATABASE_PASSWORD = postgres
+EMAIL_HOST_USER = 'your_email'
+EMAIL_HOST_PASSWORD = 'password'
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
+DEFAULT_FROM_EMAIL = 'no-reply'
+EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
